--- a/client/callback.html
+++ b/client/callback.html
@@ -45,7 +45,7 @@
             }
           }
         } 
-        xmlHttp.open('GET', window.location.protocol + '//' + window.location.hostname + ':' + window.location.port + '/api/' + sessionStorage.getItem('logging_into') + '/authenticate?code=' + token, true);
+        xmlHttp.open('GET', window.location.protocol + '//' + window.location.hostname + ':' + window.location.port + '/api/' + localStorage.getItem('logging_into') + '/authenticate?code=' + token, true);
         xmlHttp.send(null);
 
     
