--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
       }
     </style>
   </head>
-  <body oncontextmenu="return(false);">
+  <body>
     <template type="text/template" id="aboutArtistTemplate">
 
       </div>
@@ -101,6 +101,38 @@
 
     </template>
     <div class="mainbody body-root splatter"></div>
+    <div class="shell-bg">
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+    </div>
     <div style="display: none" class="mainbody body"></div>
     <div id="loading" class="spinner origo"><div class="dot1"></div><div class="dot2"></div><div class="rect3"></div><div class="rect4"></div><div class="rect5"></div></div>
   </body>
