--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
     <script src="js/vendor/sprintf.js"></script>
     <script src="js/vendor/underscore.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script type="text/javascript" src="js/vendor/van.min.js"></script>
  
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script>
